--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "fill-db": "node seeds.js",
     "start": "nodemon server/index.js",
     "react-dev": "webpack -d --watch"
   },
