--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   },
   "scripts": {
     "start": "nodemon server/index.js",
+    "db": "mysql -u root -p < schema.sql",
+    "seed": "node seeds.js",
     "react-dev": "webpack -d --watch"
   },
   "dependencies": {
+    "acorn": "^6.0.4",
+    "axios": "^0.18.0",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "mysql": "^2.14.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -25,7 +30,12 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "faker": "^4.1.0",
     "webpack": "^2.2.1"
   }
