--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "fill-db": "node seeds.js",
+    "fill-db": "node database/seeds.js",
     "start": "nodemon server/index.js",
     "db": "mysql -u root -p < schema.sql",
     "seed": "node seeds.js",
