--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "body-parser": "^1.17.2",
+    "bootstrap": "^4.2.1",
     "express": "^4.15.4",
     "jquery": "^3.3.1",
     "mysql": "^2.14.1",
