--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dev": "webpack -d --watch",
     "dockerise": "node ./database/seeds.js & node ./server/index.js",
     "restaurant-gen": "node database/SDC-seed-restaurants.js",
-    "users-gen": "node database/SDC-seed-users.js"
+    "users-gen": "node database/SDC-seed-users.js",
+    "mongo-generate-csv": "node database/Mongo-seed-Script.js"
   },
   "dependencies": {
     "acorn": "^6.0.4",
@@ -25,6 +26,7 @@
     "bootstrap": "^4.2.1",
     "express": "^4.15.4",
     "jquery": "^3.3.1",
+    "mongoose": "^5.4.3",
     "mysql": "^2.14.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.32.4",
