--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "fill-db": "node database/seeds.js",
-    "start": "nodemon server/index.js",
+    "start": "nodemon server/crudRoutes.js",
     "db": "mysql -u root -p < schema.sql",
     "seeds": "node ./database/seed.js",
     "react-dev": "webpack -d --watch",
