write a script that will query my postgres database 1000 times and log an average query speed to the nearest thousandth of a millisecond.

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "bluebird": "^3.5.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.2.1",
+    "cors": "^2.8.5",
     "express": "^4.15.4",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.3",
     "mysql": "^2.14.1",
+    "performance-now": "^2.1.0",
     "pg": "^7.8.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.32.4",
