--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "fill-db": "node database/seeds.js",
     "startMongo": "nodemon server/mongoCrudRoutes.js",
     "startPostgres": "nodemon server/postgresCrudRoutes.js",
-    "db": "mysql -u root -p < schema.sql",
-    "seeds": "node ./database/seed.js",
+    "craftSchema": "mysql -u root -p < database/postGreSQL_schema.sql",
     "react-dev": "webpack -d --watch",
     "dockerise": "node ./database/seeds.js & node ./server/index.js",
-    "postgres-generate-csvs": "node database/Postgres-seeding-script.js",
-    "users-gen": "node database/SDC-seed-users.js",
-    "mongo-generate-csvs": "node database/Mongo-seeding-script.js"
+    "postgres-generate-csvs": "node database/seeding_scripts/Postgres-seeding-script.js",
+    "mongo-generate-csvs": "node database/seeding_scripts/Mongo-seeding-script.js"
   },
   "dependencies": {
     "acorn": "^6.0.4",
@@ -30,6 +27,7 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.4.3",
     "mysql": "^2.14.1",
+    "newrelic": "^5.0.0",
     "performance-now": "^2.1.0",
     "pg": "^7.8.0",
     "react": "^15.6.1",
