--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "startMongo": "nodemon server/mongoCrudRoutes.js",
     "startPostgres": "nodemon server/postgresCrudRoutes.js",
-    "craftSchema": "mysql -u root -p < database/postGreSQL_schema.sql",
+    "createSchema": "psql -d sdc_project -a -f database/postGreSQL_schema.sql",
     "react-dev": "webpack -d --watch",
     "dockerise": "node ./database/seeds.js & node ./server/index.js",
     "postgres-generate-csvs": "node database/seeding_scripts/Postgres-seeding-script.js",
