--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.15.4",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.3",
+    "morgan": "^1.9.1",
     "mysql": "^2.14.1",
     "newrelic": "^5.0.0",
     "performance-now": "^2.1.0",
