--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.14.1",
     "newrelic": "^5.0.0",
+    "nodemon": "^1.18.9",
     "performance-now": "^2.1.0",
     "pg": "^7.8.0",
     "react": "^15.6.1",
